# rota

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rota.example.yaml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  backends.md  configuration.md  federation.md  getting-started.md  introduction.md
crates/rota-cli/: Cargo.toml
crates/rota-cli/src/: client.rs  format.rs  lib.rs  main.rs
crates/rota-core/: Cargo.toml
crates/rota-core/src/: backend.rs  cert.rs  cluster.rs  config.rs  error.rs  lib.rs  protocol.rs  secrets.rs
crates/rota-daemon/: Cargo.toml
crates/rota-daemon/src/: dashboard.rs  install_sync.rs  lib.rs  main.rs  metrics.rs  renewer.rs  scheduler.rs  socket.rs
crates/rota-daemon/src/audit/: mod.rs  schema.rs  sqlite.rs  sqlite_initial.sql  store.rs  surrealdb.rs  surrealdb_initial.surql  tests.rs  types.rs
crates/rota-daemon/src/backends/: acme.rs  cloudflare.rs  dsm.rs  email.rs  filesystem.rs  haproxy.rs  k8s.rs  mod.rs  nginx.rs  webhook.rs  webroot.rs
crates/rota-daemon/src/backends/cloudflare/: tests.rs
crates/rota-daemon/src/backends/namecheap/: ca.rs  client.rs  dcv.rs  mod.rs  registrar.rs  xml.rs
crates/rota-daemon/src/cluster/: mod.rs  no_op.rs  surrealdb.rs
crates/rota-daemon/src/dashboard/: tests.rs
crates/rota-daemon/src/install_sync/: tests.rs
crates/rota-daemon/src/renewer/: tests.rs
crates/rota-daemon/src/scheduler/: tests.rs
crates/rota-daemon/src/socket/: tests.rs
deploy/: README.md  compose.yml
