[workspace]
resolver = "2"
members = [
  "crates/rota-core",
  "crates/rota-daemon",
  "crates/rota-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"
authors = ["Shon Thomas <shon@oneiriq.com>"]
repository = "https://github.com/Oneiriq/rota"
homepage = "https://github.com/Oneiriq/rota"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
maud = { version = "0.26", features = ["axum"] }
quick-xml = { version = "0.36", features = ["serialize"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.16"
time = "0.3"
instant-acme = "0.8"
pem = "3"
oneiriq-surql = { version = "0.2", default-features = false, features = ["client-rustls"] }
futures = "0.3"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls", "ring"] }
prometheus = { version = "0.14", default-features = false }
kube = { version = "3", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.27", default-features = false, features = ["v1_33"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
