[package]
name = "rota-cli"
description = "rota command-line client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "rota_cli"
path = "src/lib.rs"

[[bin]]
name = "rota"
path = "src/main.rs"

[dependencies]
rota-core = { path = "../rota-core" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
