[package]
name = "rota-core"
description = "Core types, traits, and config schema for rota"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }
time = { workspace = true }
