[package]
name = "rota-daemon"
description = "Long-running rota daemon. Scheduler, dashboard, audit."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "rota_daemon"
path = "src/lib.rs"

[[bin]]
name = "rotad"
path = "src/main.rs"

[features]
default = ["surrealdb"]
# Pluggable SurrealDB-backed audit store via oneiriq-surql with the
# pure-rustls TLS stack (matches the rest of the rota workspace).
# Disable this feature to ship a slimmer build that only knows the
# SQLite audit backend.
surrealdb = ["dep:oneiriq-surql", "dep:futures"]

[dependencies]
rota-core = { path = "../rota-core" }
oneiriq-surql = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
maud = { workspace = true }
quick-xml = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
# Tests connect to the SurrealDB-backed audit store via the embedded
# `mem://` engine. surql-rs only pulls `protocol-ws`; the `kv-mem`
# engine is feature-gated inside the surrealdb crate, so the test
# binary opts in here without bloating the production rotad build.
surrealdb = { version = "3.0", default-features = false, features = ["protocol-ws", "kv-mem"] }

